log
Tue 07 May 2024 04:03:17 PM UTC: 
 tests:  1|8
total_score: 0/70
cadaf52
Tue 07 May 2024 04:16:27 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
911c1c7
Tue 07 May 2024 04:16:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ae8d0a7
Tue 07 May 2024 04:33:31 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|0
57d0ae8
Tue 07 May 2024 04:34:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
abbdd3b
Tue 07 May 2024 04:41:08 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
12898fb
Tue 07 May 2024 04:52:35 PM UTC: 
 treemap.c | 38 +++++++++++++++++++++++++++++++++++++-
 1 file changed, 37 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
39291fb
Tue 07 May 2024 04:55:54 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
eec43f9
Tue 07 May 2024 05:13:07 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
ca0160d
Tue 07 May 2024 05:13:42 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  15|4
total_score: 25/70
56b7359
Tue 07 May 2024 06:40:01 PM UTC: 
 treemap.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 55 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:138:9: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
  138 |         Tree_Node* child;
      |         ^~~~~~~~~
      |         TreeNode
treemap.c:140:19: error: assignment to ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  140 |             child = temp->left;
      |                   ^
treemap.c:142:19: error: assignment to ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  142 |             child = temp->right;
      |                   ^
treemap.c:146:30: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
  146 |                 parent->left = child;
      |                              ^
treemap.c:148:31: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
  148 |                 parent->right = child;
      |                               ^
treemap.c:150:24: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
  150 |             tree->root = child;
      |                        ^
treemap.c:157:9: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
  157 |         Tree_Node* successor = getMinimumNode(temp->right);
      |         ^~~~~~~~~
      |         TreeNode
treemap.c:157:32: error: implicit declaration of function ‘getMinimumNode’ [-Werror=implicit-function-declaration]
  157 |         Tree_Node* successor = getMinimumNode(temp->right);
      |                                ^~~~~~~~~~~~~~
treemap.c:157:32: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:158:32: error: request for member ‘key’ in something not a structure or union
  158 |         int succKey = successor->key;
      |                                ^~
treemap.c:159:35: error: request for member ‘data’ in something not a structure or union
  159 |         void* succData = successor->data;
      |                                   ^~
treemap.c:160:9: error: implicit declaration of function ‘delete’ [-Werror=implicit-function-declaration]
  160 |         delete(tree, succKey);  // Eliminamos el sucesor
      |         ^~~~~~
treemap.c:161:13: error: ‘TreeNode’ has no member named ‘key’
  161 |         temp->key = succKey;
      |             ^~
treemap.c:162:13: error: ‘TreeNode’ has no member named ‘data’
  162 |         temp->data = succData;
      |             ^~
treemap.c:112:11: error: unused variable ‘key’ [-Werror=unused-variable]
  112 |     Pair *key = node->pair->key;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
a9b8f83
Tue 07 May 2024 07:12:54 PM UTC: 
 treemap.c | 95 +++++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 62 insertions(+), 33 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:181:17: error: ‘temp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  181 |         else if (parent->right == temp)
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
f7e1106
Tue 07 May 2024 07:14:54 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:166:17: error: ‘temp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  166 |         else if (parent->right == temp)
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
ba6fa03
Tue 07 May 2024 07:16:35 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  110 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
efa2bd7
Tue 07 May 2024 07:16:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:15: error: unused variable ‘parent’ [-Werror=unused-variable]
  110 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1495c28
Tue 07 May 2024 07:18:38 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:109:15: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
  109 |     TreeNode* temp = NULL;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
d06a17c
Tue 07 May 2024 07:22:18 PM UTC: 
 treemap.c | 81 +--------------------------------------------------------------
 1 file changed, 1 insertion(+), 80 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:11: error: unused variable ‘key’ [-Werror=unused-variable]
  113 |     Pair *key = node->pair->key;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
614c348
